--- a/index.html
+++ b/index.html
@@ -10,21 +10,26 @@
       <source src="bazinga.swf.mp3" type="audio/mpeg">
     </audio>
 <header><h2><span><strong>Number</strong></span> Guesser</h2></header>
-  <form>
+<div id="OOR"></div>
+<form>  
     <label for="userinput"></label>
     <input id="userinput" autocomplete="off" onfocus="select()" onkeypress="return NaNFool()" type="number" placeholder="Enter your guess"><br />
-    <label for="minInput"><p>Min</p></label>
-    <input id="minInput" class="range"  autocomplete="off" onfocus="select()" type="number" placeholder="Min" value="0"> -
-    <input id="maxInput" class="range" autocomplete="off" onfocus="select()" type="number" placeholder="Max" value="100">
-    <label for="maxInput"><p>Max</p></label>
-    <br />
     <button id="submit" type="submit" disabled="true">Guess</button>
-    <button id="clear" type="button" disabled="true">Clear</button><br />
-    <p id="lastguess"></p><br />
-    <h1></h1>
-    <p id="result"></p>
-    <button type="reset" value="Reset" id="reset" disabled="true">Reset</button>
+    <button id="clear" type="button" disabled="true">Clear</button>
+  </form><br />
+    <form>
+    <button id="custom" type="button"  >Custom Game</button>
+    <label for="minInput"><p class="minmax">Min</p></label>
+    <input id="minInput" class="range"  autocomplete="off" onfocus="select()" type="number" placeholder="min"  onkeypress="return NaNFool()"  value="0"> -
+    <input id="maxInput" class="range" autocomplete="off" onfocus="select()" type="number" placeholder="max" onkeypress="return NaNFool()"  value="100">
+    <label for="maxInput"><p class="minmax">Max</p></label>
   </form>
+    
+    <p id="lastguess"></p>
+    <h1>?</h1>
+    <p id="result"></p><br />
+    <button type="reset" value="Reset" id="reset" disabled="true">Reset</button>
+
 
   <!-- <div class="box"></div>
 <input class="text-input" onfocus="select()" type="text" placeholder="Text">
