Initial After You Win Version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="OOR"></div>
 <form>  
     <label for="userinput"></label>
-    <input id="userinput" autocomplete="off" onfocus="select()" onkeypress="return NaNFool()" type="number" placeholder="Enter your guess"><br />
+    <input id="userinput" autocomplete="off" onfocus="select()" onkeypress="return NaNFool()" type="number"><br />
     <button id="submit" type="submit" disabled="true">Guess</button>
     <button id="clear" type="button" disabled="true">Clear</button>
   </form><br />
