--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <head>
 <title>Number Guesser</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&effect=fire-animation" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <audio id="correct">
       <source src="bazinga.swf.mp3" type="audio/mpeg">
     </audio>
-<header><h2><span><strong>Number</strong></span> Guesser</h2></header>
+<header><h2><strong>Number</strong><span class="onFire">Guesser</span></h2></header>
 <div id="OOR"></div>
+<main>
 <form>  
     <label for="userinput"></label>
     <input id="userinput" autocomplete="off" onfocus="select()" onkeypress="return NaNFool()" type="number"><br />
@@ -29,7 +30,7 @@
     <h1>Play Me</h1>
     <p id="result"></p><br />
     <button type="reset" value="Reset" id="reset" disabled="true">Reset</button>
-
+</main>
 
   <!-- <div class="box"></div>
 <input class="text-input" onfocus="select()" type="text" placeholder="Text">
